--- a/index.html
+++ b/index.html
@@ -455,35 +455,41 @@ document.getElementById('give-up').onclick = async function () {
   );
   const segmentIds = roadNameToIds[normalizedKey];
 
-  // Update attempts
+  // Track attempts manually
   const prevAttempts = roadAttemptsMap.get(normalizedCorrect) || 0;
   const newAttempts = prevAttempts + 1;
   roadAttemptsMap.set(normalizedCorrect, newAttempts);
 
+  // If final attempt, mark as hint-used and reveal
   if (newAttempts >= 4) {
-    // Final attempt → reveal + mark as hint-used
     completedRoads.add(normalizedCorrect);
     for (const layer of nameToLayers[normalizedKey] || []) {
       layer.setStyle({ color: 'orange', weight: 6 });
     }
-    await saveGuessSegmentIds(segmentIds, false, true); // incorrect + used hint
+
+    await saveGuessSegmentIds(segmentIds, false, true);  // 👈 key line: incorrect + used hint
+
     alert(`Correct answer: ${correctName}`);
     document.getElementById('guess-modal').style.display = 'none';
     document.getElementById('feedback-message').innerText = '';
     currentRoad = null;
-    return;
-  }
+  } else {
+    // Before 4th attempt: just mark as red and keep it clickable
+    for (const layer of nameToLayers[normalizedKey] || []) {
+      layer.setStyle({ color: 'red', weight: 6 });
+    }
 
-  // Otherwise: regular incorrect (red), still clickable
-  for (const layer of nameToLayers[normalizedKey] || []) {
-    layer.setStyle({ color: 'red', weight: 6 });
-  }
+    await saveGuessSegmentIds(segmentIds, false, false);  // 👈 early give-up = incorrect only
 
-  await saveGuessSegmentIds(segmentIds, false, false); // incorrect no hint
-  document.getElementById('guess-modal').style.display = 'none';
-  document.getElementById('feedback-message').innerText = '';
-  // DO NOT null currentRoad so it's still guessable
+    document.getElementById('feedback-message').innerText = 'Incorrect';
+    setTimeout(() => {
+      document.getElementById('guess-modal').style.display = 'none';
+      document.getElementById('feedback-message').innerText = '';
+      currentRoad = null;
+    }, 800);
+  }
 };
+
 
 loadMap();
 
