--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       width: 30px;
       height: 30px;
       font-size: 18px;
-      display: flex;
+      display: none;
       align-items: center;
       justify-content: center;
       cursor: pointer;
