--- a/index.html
+++ b/index.html
@@ -53,18 +53,28 @@
     }
 
     #music-modal {
-      position: absolute;
-      top: 50px;
-      left: 10px;
-      background: white;
-      border: 1px solid #ccc;
-      padding: 8px;
-      border-radius: 6px;
-      z-index: 1003;
-      display: none;
-      flex-direction: column;
-      align-items: stretch;
-    }
+  position: absolute;
+  top: 50px;
+  left: 10px;
+  background: white;
+  border: 1px solid #ccc;
+  padding: 8px;
+  border-radius: 6px;
+  z-index: 1003;
+  flex-direction: column;
+  align-items: stretch;
+  opacity: 0;
+  transform: translateY(-10px);
+  pointer-events: none;
+  transition: opacity 0.25s ease, transform 0.25s ease;
+}
+#music-modal.show {
+  opacity: 1;
+  transform: translateY(0);
+  pointer-events: auto;
+  display: flex;
+}
+
 
     #music-modal button {
       margin-top: 4px;
