--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       line-height: 1.5em;
       position: absolute;
       top: 10px;
-      right: 10px;
+      left: 10px;
       z-index: 1000;
     }
 
@@ -38,7 +38,7 @@
 
     #music-btn {
       position: absolute;
-      top: 10px;
+      top: 135px;
       left: 10px;
       background: white;
       border-radius: 50%;
