--- a/index.html
+++ b/index.html
@@ -9,16 +9,33 @@
     #map { height: 100vh; }
 
     .legend {
-      background: white;
-      padding: 6px 10px;
-      border-radius: 4px;
-      font-size: 12px;
-      line-height: 1.5em;
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      z-index: 1000;
-    }
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background: white;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 10px 12px;
+  font-size: 13px;
+  line-height: 1.6em;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+  z-index: 1000;
+  min-width: 170px;
+}
+
+.legend-item {
+  display: flex;
+  align-items: center;
+  margin: 2px 0;
+}
+
+.legend-color {
+  width: 14px;
+  height: 14px;
+  border-radius: 3px;
+  margin-right: 8px;
+  border: 1px solid #666;
+}
 
     #login-btn, #logout-btn {
       position: absolute;
@@ -136,15 +153,16 @@
     <button id="mute-btn">Mute</button>
     <button id="skip-btn">Skip Track</button>
   </div>
-  <div class="legend" id="legend">
-    <strong>Legend</strong><br>
-    Black: Unguessed<br>
-    Red: Incorrect<br>
-    Orange: Hint Used<br>
-    Gray: Correct<br>
-    Yellow: Suffix Warning<br>
-    Prismatic: Ultra-Hard Mode
-  </div>
+ <div class="legend" id="legend">
+  <strong style="display: block; margin-bottom: 6px;">Legend</strong>
+  <div class="legend-item"><div class="legend-color" style="background: black;"></div>Unguessed</div>
+  <div class="legend-item"><div class="legend-color" style="background: red;"></div>Incorrect</div>
+  <div class="legend-item"><div class="legend-color" style="background: orange;"></div>Hint Used</div>
+  <div class="legend-item"><div class="legend-color" style="background: gray;"></div>Correct</div>
+  <div class="legend-item"><div class="legend-color" style="background: yellow;"></div>Suffix Warning</div>
+  <div class="legend-item"><div class="legend-color" style="background: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet); border: none;"></div>Ultra-Hard Mode</div>
+</div>
+
   <button id="login-btn">Login with Google</button>
   <button id="logout-btn">Logout</button>
 
