--- a/index.html
+++ b/index.html
@@ -15,19 +15,23 @@
   background: white;
   border: 1px solid #ccc;
   border-radius: 8px;
-  padding: 10px 12px;
-  font-size: 13px;
-  line-height: 1.6em;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+  padding: 8px;
+  font-size: 12.5px;
+  line-height: 1.4em;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.12);
   z-index: 1000;
-  min-width: 170px;
+  width: fit-content;
+  max-width: 200px;
 }
+
 
 .legend-item {
   display: flex;
   align-items: center;
+  gap: 6px;
   margin: 2px 0;
 }
+
 
 .legend-color {
   width: 14px;
