--- a/index.html
+++ b/index.html
@@ -173,8 +173,11 @@
   <div id="guess-modal">
     <input type="text" id="guess-input" placeholder="Enter road name" />
     <div>
-      <button id="submit-guess">Submit</button>
-      <button id="give-up">Give Up</button>
+   <div id="auth-controls" style="position: absolute; top: 10px; right: 10px; z-index: 1001;">
+  <button id="login-btn" style="display: none;">Sign in with Google</button>
+  <button id="logout-btn" style="display: none;">Logout</button>
+</div>
+
     </div>
     <div id="feedback-message" style="margin-top: 8px; font-size: 14px;"></div>
   </div>
