--- a/index.html
+++ b/index.html
@@ -125,6 +125,20 @@
       width: 260px;
       text-align: center;
     }
+     #auth-controls button {
+    padding: 6px 12px;
+    margin-bottom: 6px;
+    background: white;
+    border: 1px solid #333;
+    border-radius: 6px;
+    font-size: 13px;
+    cursor: pointer;
+    transition: background 0.2s ease;
+  }
+
+  #auth-controls button:hover {
+    background: #f0f0f0;
+  }
 
    #guess-modal input {
   display: block;
