--- a/index.html
+++ b/index.html
@@ -270,12 +270,20 @@ supabase.auth.onAuthStateChange(async (event, session) => {
 
 async function checkLogin() {
   const { data: { session } } = await supabase.auth.getSession();
-  const user = session?.user;
-  if (user) {
-    currentUserId = user.id;
+  const loginBtn = document.getElementById('login-btn');
+  const logoutBtn = document.getElementById('logout-btn');
+
+  if (session?.user) {
+    currentUserId = session.user.id;
+    loginBtn.style.display = 'none';
+    logoutBtn.style.display = 'inline-block';
     await loadGuessedSegmentIds();
+  } else {
+    loginBtn.style.display = 'inline-block';
+    logoutBtn.style.display = 'none';
   }
 }
+
 
 async function loadGuessedSegmentIds() {
   const { data, error } = await supabase
