--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
       display: none;
       width: 260px;
       text-align: center;
+      <button id="submit-guess">Submit</button>
+<button id="give-up">Give Up</button>
+
     }
      #auth-controls button {
     padding: 6px 12px;
