--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <input type="text" id="guess-input" placeholder="Enter road name" />
     <div>
    <div id="auth-controls" style="position: absolute; top: 10px; right: 10px; z-index: 1001;">
-  <button id="login-btn" style="display: none;">Sign in with Google</button>
+  <button id="login-btn" style="display: none;">Login with Google</button>
   <button id="logout-btn" style="display: none;">Logout</button>
 </div>
 
