--- a/index.html
+++ b/index.html
@@ -714,5 +714,10 @@ window.addEventListener('click', async () => {
 });
 
   </script>
+  <div id="auth-controls" style="position: absolute; top: 10px; right: 10px; z-index: 1001;">
+  <button id="login-btn" style="display: none;">Login with Google</button>
+  <button id="logout-btn" style="display: none;">Logout</button>
+</div>
+
 </body>
 </html>
