--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@ window.addEventListener('click', async () => {
     playLoop();
     musicPlaying = true;
   }
-}, { once: true });
+, { once: true });
 
 document.addEventListener('DOMContentLoaded', async () => {
   console.log("📦 DOMContentLoaded triggered");
