--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@ document.getElementById('guess-input').addEventListener('input', async function 
 
 
 
-<!-- BEGIN: JavaScript for music, login, and app startup -->
+// BEGIN: JavaScript for music, login, and app startup
 <script type="module">
   // 🎵 Web Audio API Seamless Loop Logic
   let audioContext = null;
