--- a/index.html
+++ b/index.html
@@ -687,6 +687,7 @@ document.addEventListener('DOMContentLoaded', async () => {
 
   // Attach modal behavior
   let musicModalVisible = false;
+  console.log('musicBtn:', musicBtn);
   if (musicBtn && modal) {
   musicBtn.onclick = () => {
     musicModalVisible = !musicModalVisible;
